Trying to update master

--- a/src/GUI/view.properties
+++ b/src/GUI/view.properties
@@ -1,3 +1,5 @@
 defaultTurtle=turtle1.png
 canvasWidth=800
 canvasHeight=580
+
+buttonList =HelpButton,ClearCommandButton,EnterCommandButton,UploadButton
