Design changes to buttons. Adds reflections and map to lambdas of button event handling methods

--- a/src/GUI/view.properties
+++ b/src/GUI/view.properties
@@ -1,5 +1,4 @@
 defaultTurtle=turtle1.png
 canvasWidth=800
 canvasHeight=580
-
-buttonList =HelpButton,ClearCommandButton,EnterCommandButton,UploadButton
+buttons=HelpButton,EnterCommndButton,ClearCommandButton,UploadButton
