adds new dropdown for line property (dashed, solid, dotted)

--- a/src/GUI/dropdown/dropdown.properties
+++ b/src/GUI/dropdown/dropdown.properties
@@ -1,3 +1,4 @@
 penColors=White,Black,Green,Yellow,Red
 backgroundColors=White,Black,Green,Yellow,Red
 languageList=Chinese,English,French,German,Italian,Portugese,Russian,Spanish
+lineProperties=Solid,Dashed,Dotted
