--- a/src/GUI/view.properties
+++ b/src/GUI/view.properties
@@ -1,4 +1,4 @@
 defaultTurtle=turtle1.png
 canvasWidth=800
 canvasHeight=580
-buttons=HelpButton,EnterCommndButton,ClearCommandButton,UploadButton
+buttons=HelpButton,EnterCommandButton,ClearCommandButton,UploadButton
