Adds Pen Object and default pen states to properties file

--- a/src/GUI/view.properties
+++ b/src/GUI/view.properties
@@ -2,3 +2,7 @@ defaultTurtle=turtle1.png
 canvasWidth=800
 canvasHeight=580
 buttons=HelpButton,EnterCommandButton,ClearCommandButton,UploadButton
+penStates=solid,dashed,dotted
+defaultPenColor=black
+defaultPenThickness=1
+defaultPenState=solid
