added Turtle State viewBox and fixed minor changes in other classes

--- a/src/GUI/view.properties
+++ b/src/GUI/view.properties
@@ -2,3 +2,4 @@ defaultTurtle=turtle1.png
 canvasWidth=800
 canvasHeight=580
 buttons=HelpButton,EnterCommandButton,ClearCommandButton,UploadButton
+dropdowns=FileDropdown,LanguageListDropdown,BackgroundColorDropdown,PenColorDropdown,LineTypeDropdown
