Changes the structure of Observers. They are being added as GUI elements

--- a/src/GUI/turtlepane/default.properties
+++ b/src/GUI/turtlepane/default.properties
@@ -1,5 +1,5 @@
-penColors=Black
+#penColors=Black
 backgroundColors=LIGHTGREEN
 languageList=English
-width=800
-height=580
+#width=800
+#height=580
