--- a/src/GUI/view.properties
+++ b/src/GUI/view.properties
@@ -3,5 +3,5 @@ canvasWidth=800
 canvasHeight=580
 penStates=solid,dashed,dotted
 defaultPenColor=black
-defaultPenThickness=1
-defaultPenState=solid
+defaultLineThickness=1
+defaultLineType=solid
