--- a/src/GUI/view.properties
+++ b/src/GUI/view.properties
@@ -5,3 +5,4 @@ penStates=solid,dashed,dotted
 defaultPenColor=black
 defaultLineThickness=1
 defaultLineType=solid
+defaultPalette=WHITE,BLACK,RED,YELLOW,GREEN
