--- a/src/GUI/view.properties
+++ b/src/GUI/view.properties
@@ -6,3 +6,4 @@ defaultPenColor=black
 defaultLineThickness=1
 defaultLineType=solid
 defaultPalette=WHITE,BLACK,RED,YELLOW,GREEN
+defaultBackgroundColor=LIGHTGREEN
