added file loader method

--- a/src/GUI/dropdown/dropdown.properties
+++ b/src/GUI/dropdown/dropdown.properties
@@ -2,4 +2,4 @@ penColors=1- White,2- Black,3- Green,4- Yellow,5- Red
 backgroundColors=1- White,2- Black,3- Green,4- Yellow,5- Red
 languageList=Chinese,English,French,German,Italian,Portugese,Russian,Spanish
 lineProperties=Solid,Dashed,Dotted
-fileList=New Workspace,Save Workspace
+fileList=New Workspace,Save Workspace,Load .logo File
