Implements Inactive turtles as transparent on the pane

--- a/src/GUI/view.properties
+++ b/src/GUI/view.properties
@@ -7,3 +7,4 @@ defaultLineThickness=1
 defaultLineType=solid
 defaultPalette=WHITE,BLACK,RED,YELLOW,GREEN
 defaultBackgroundColor=LIGHTGREEN
+inactiveTurtleOpacity=0.35
