--- a/src/GUI/view.properties
+++ b/src/GUI/view.properties
@@ -8,4 +8,4 @@ defaultLineType=solid
 defaultPalette=WHITE,BLACK,RED,YELLOW,GREEN
 defaultBackgroundColor=LIGHTGREEN
 inactiveTurtleOpacity=0.35
-dancingDuvall=dancingDuvall.gif
+dancingDuvall=dancingDuvall.png
